[package]
name = "mkghal"
version = "0.1.0"
edition = "2024"
description = "Creates 'ghost albums' for use as placeholders in local files storage in apps like Spotify."
license = "MIT"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
reqwest = "0.12.15"
scraper = "0.23.1"
tokio = { version = "1.45.0", features = ["full"] }
